# halra

./: .gitignore  LICENSE  README.md  distributed_halra.py  halra.py  normalize_h5ad_parallel.py  pyproject.toml  read_write_adata.py  read_write_h5ad.py  read_write_h5ad_parallel.py  svd_h5ad_parallel.py  write_adata.py
experimental/distributed/: distributed_halra.py
src/halra/: __init__.py  core.py
