[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "halra"
version = "0.1.0"
description = "High-performance ALRA-style imputation for sparse single-cell matrices"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
  {name = "Jean Merlet"}
]
dependencies = [
  "anndata>=0.10",
  "numpy>=1.24",
  "scipy>=1.10",
  "scikit-learn>=1.3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
